# BunkaTopics

./: .env.model  .env_saved  .flake8  .gitattributes  .gitignore  .travis.yml  404.html  Bunka  Dockerfile  DockerfileWorker  Makefile  README.md  Untitled.ipynb  changelog.html  contribution.html  extra.css  fine-tuning.html  framing-analysis.html  full_test.ipynb  getting-started.html  index.html  main.py  mkdocs.yml  nginx-configuration.conf  notebook_test.ipynb  objects.inv  packaging.sh  publish.py  pyproject.toml  requirements.txt  roadmap.txt  setup.py  sitemap.xml  test.ipynb  test.py  test_2.py  test_topics.ipynb  topic_exploration.html  update-docker.sh  wp.ipynb
.github/workflows/: documentation.yml  python-app.yml  test_package_pypi.yml  testing.yml  testing_package.yml  testing_refacto.yml
.ipynb_checkpoints/: test_topics-checkpoint.ipynb
api/: Dockerfile  Makefile  README.md  app.py  celeryconfig.py  datamodel.py  requirements.txt  run_docker.sh  run_server.sh  run_worker.sh  test_api.ipynb
api/bunka_api/: app.py  datamodel.py  jobs.py  main.py  processing_functions.py  routes.py
api/deployment/: nginx-configuration-prod.conf
api/notebooks/: api_examples.ipynb
api/tests/: csv_test.csv  test_api.ipynb
bunka-api/: bunkatopics.html
bunka-api/bourdieu/: bourdieu-api.html  bourdieu-visualization-one-dimension.html  bourdieu-visualization.html
bunka-api/topic_modeling/: terms_extractor.html  topic-ranker.html  topic_llm_cleaning.html  topic_model_builder.html
bunka-api/visualization/: topic-visualization.html
bunka_env/: pyvenv.cfg
bunka_topics/: basic_class.py  centroids.py  indexer.py  indexer_sqlite3.py  sent_multiprocessing.py  topics.py
bunka_topics/.ipynb_checkpoints/: basic_class-checkpoint.py
bunkatopics/: __init__.py  _bunkatopics.py  _bunkatopics_backup_dosctrings.py  basic_class.py  bunkatopics.py  bunkatopics_old.py  bunkatopics_test.py  datamodel.py  density_plot.py  extract_terms.py  folding_utils.py  logging.py  multiprocess_embeddings.py  requirements-bunka.txt  sent_multiprocessing.py  setup.py  specificity.py  topics.py  topics_legacy.py  utils.py
bunkatopics/bourdieu/: __init__.py  boudieu_one_dimension.py  bourdieu_api.py  bourdieu_one_dimension.py  bourdieu_visualizer.py
bunkatopics/bunka_logger/: config.py  utils.py
bunkatopics/cleaning/: outlier_detection.py
bunkatopics/functions/: bourdieu_api.py  clean_text.py  coherence.py  extract_terms.py  knee.py  llama.cpp.py  llama.py  prompts.py  rag.py  search.py  topic_document.py  topic_gen_representation.py  topic_representation.py  topic_utils.py  topics.py  topics_modeling.py  utils.py
bunkatopics/logging/: __init__.py  builder.py
bunkatopics/notebook_interactions/: topic_manual_cleaner.py
bunkatopics/serveur/: __init__.py  server_utils.py  utils.py
bunkatopics/topic_modeling/: __init__.py  bourdieu_api.py  document_topic_analyzer.py  (+10 more)
data/: imdb.csv
docs/: bunka-api.md  changelog.md  contribution.md  fine-tuning.md  framing-analysis.md  getting-started.md  index.md  technology.md  topic_exploration.md  use-cases.md
generative_model_api/: model.py  test.ipynb
notebooks/: api_examples.ipynb  bourdieu_api.ipynb  bunka.ipynb  cleaning.ipynb  demo.ipynb  ml.csv  pipeline.ipynb  pipeline_front_end_bourdieu.ipynb  temp-plot.html  test_csv_trump_clean.csv  wbourdieu_api.ipynb
search/: search_index.json
site/: 404.html  boudieu.html  bunka-api.html  changelog.html  contribution.html  fine-tuning.html  framing-analysis.html  getting-started.html  index.html  objects.inv  sitemap.xml  technology.html  topic_exploration.html  use-cases.html
streamlit/: app.py  app_full.py  trump_test.csv
test/: docs_embeddings.csv  main.py  test.ipynb  test.py
tests/: load_bunka.ipynb  notebook_test.ipynb  run_bourdieu.py  run_bunka.py  test_bug.py  test_bunka.py  test_bunka_language.py  test_bunka_package.py
tests_old/: run_bourdieu.py  run_bunka.py  test_bunka.py
web/: .eslintrc.json  Dockerfile  Makefile  README.md  biome.json  env  env.model  eslintrc.json  move_file.sh  nginx-configuration.conf  package-lock.json  package.json  update-docker.sh
web_test/: Dockerfile  Makefile  build.sh  nginx-configuration.conf  package-lock.json  package.json
(+114 files in other folders)
