[tool.poetry]
name = "bunkatopics"
version = "0.43.2"
description = "Advanced Topic Visualization"
authors = ["Charles De Dampierre <charlesdedampierre@gmail.com>"]

[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bunkatopics"
version = "0.43.2"
description = "Advanced Topic Visualization"
license = { file = "LICENSE.txt" }
requires-python = ">= 3.9"
maintainers = [
    { name = "Charles de Dampierre", email = "charlesdedampierre@gmail.com" },
]
keywords = ["spacy", "nlp", "text processing", "linguistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "pandas>=2.0.2",
    "umap-learn>=0.5.3",
    "pydantic>=1.10.9",
    "loguru>=0.7.0",
    "langchain>=0.0.206",
    "plotly>=5.15.0",
    "textacy>=0.13.0",
    "gensim>=4.3.1",
    "sentence-transformers>=2.2.2",
    "openai>=0.28.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.2",
    "datasets>=2.14.5",
    "chromadb==0.4.13",
    "psutil>=5.9.7",
    "colorlog>=6.8.0",
    # python-dotenv

]

[project.optional-dependencies]
front = ["streamlit>=1.26.0"]

dev = [
    "black ~= 23.0",
    "isort ~= 5.0",
    "pytest ~= 7.0",
    "pytest-cov",
    "twine ~= 4.0",
    "wheel",
]

docs = [
    "mkdocs>=1.1.2",
    "mkdocs-material>=8.1.4",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.8.0",
]

check = [
    "black ~= 23.0",
    "isort ~= 5.0",
    "mypy ~= 1.0.0",
    "pytest ~= 7.0",
    "pytest-cov",
    "ruff",
]

[project.urls]
Docs = "https://charlesdedampierre.github.io/BunkaTopics/"
Repo = "https://github.com/charlesdedampierre/BunkaTopics"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["bunkatopics"]
